--- a/app/src/app/pages/facturas/facturas.component.html
+++ b/app/src/app/pages/facturas/facturas.component.html
@@ -1,47 +1,49 @@
 
+    <div class="container-fluid px-2">
+      <h1 class="mt-4">PreFacturación</h1>
+      <ol class="breadcrumb mb-4">
+          <li class="breadcrumb-item"><a routerLink="dashboard">Dashboard</a></li>
+          <li class="breadcrumb-item active">PreFacturación</li>
+      </ol>
+
+
 
 <div class="card mb-4">
 <div class="card-header">
     <i class="fas fa-table me-1"></i>
-   Despachos
+   PreFacturación
 </div>
 
 <div class="card-body">
 
-    <input type="text"
-    class="form-control col-lg-3"
-    placeholder="Buscar guia por descripcion" 
-    #txtbuscar
-   />
+
     <br>
     <br>
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th  scope="col">Guia</th>
+                <th  scope="col">N° Despacho</th>
                 <th  scope="col">Descripcion</th>
-                <th  scope="col">nave</th>
-                <th  scope="col">Puerto</th>
-                <th  scope="col">Conductor</th>
-                <th  scope="col">Cliente</th>
-                <th  scope="col">Estado</th>
-                <th  scope="col">Ver</th>
-              
+                <th  scope="col">Tipo</th>
+                <th  scope="col">Peso</th>
+                <th  scope="col">Fecha retiro</th>
+                <th  scope="col">Fecha entrega</th>
+                <th  scope="col">Puerto Devolución</th>
+                <th  scope="col">Dirección Entrega</th>
+                <th  scope="col">Acciones</th>
             </tr>
         </thead>
         
         <tbody>
-            <tr *ngFor="let despacho of despachos">
-                <td>{{ despacho.numero}}</td>
-                <td>{{ despacho.descripcion}}</td>
-                <td>{{ despacho.nave}}</td>
-                <td>{{ despacho.Puertonombre}}</td>
-                <td>{{ despacho.cname}}</td>
-                <td>{{ despacho.cliname}}</td>
-                <td *ngIf="despacho.estado == 'Finalizado'"><span class="badge bg-success" >{{ despacho.estado}}</span></td>
-                <td *ngIf="despacho.estado == 'Proceso'" ><span class="badge bg-warning">{{ despacho.estado}}</span></td>
-                <td *ngIf="despacho.estado == 'Confirmado'" ><span class="badge bg-info">{{ despacho.estado}}</span></td>
-               
+            <tr *ngFor="let item of detalles  | paginate:{itemsPerPage: 5, currentPage: p}">
+                <td>{{ item.guia}}</td>
+                <td>{{ item.descripcion}}</td>
+                <td>{{ item.tipo}}</td>
+                <td>{{ item.peso}}</td>
+                <td>{{ item.fecha_retiro}}</td>
+                <td>{{ item.fecha_entrega}}</td>
+                <td>{{ item.pname}}</td>
+                <td>{{ item.dname}}</td>
                 <td>
                   <div 
                   class="btn-group" 
@@ -52,23 +54,17 @@
                   class="btn btn-outline-info"
                   data-bs-toggle="modal"
                   data-bs-target="#factura"
-                  (click)="getFactura(despacho)"
+                    (click)="goToLoadModal(true,item.detalle_id,item.idClient,item.estado,item.guia)"
                   >PreFactura</button>
-
-                  <button 
-                  type="button" 
-                  class="btn btn-outline-secondary"
-                  data-bs-toggle="modal"
-                  data-bs-target="#detalle"
-                  (click)="CargaDetalle(despacho)"
-                  >Detalle</button>
                 </div>
             </td>
             </tr>
 
         </tbody>
     </table>
-
+    <pagination-controls (pageChange)="p = $event"
+    previousLabel="Anterior"
+        nextLabel="Siguiente"></pagination-controls>
     
 <br>
 
@@ -79,35 +75,14 @@
   
     <!-- Modal -->
 <div class="modal fade" id="factura" tabindex="-1" aria-labelledby="costosModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <form 
-        autocomplete="off" 
-        id="TarifaForm">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Detalle Factura</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div *ngFor="let tarifadespacho of tarifadespachos"  class="form-check form-switch">
-         
-
-            <ul 
-            class="list-group list-group-horizontal">
-              <li class="list-group-item">{{tarifadespacho.Tarifa.nombre}}</li>
-              <li class="list-group-item">$</li>
-              <li class="list-group-item">{{tarifadespacho.Tarifa.valor_externo}}</li>
-            </ul>
-
-        
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-success" (click)="setEstadoDespacho()">Confirmar</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        </div>
-       </form>
-      </div>
+    <div class="modal-dialog modal-xl">
+        <app-modal-prefactura
+        [idDetails]="idDetalle"
+        [idClient]="idClient"
+        [Estado]="Estado"
+        *ngIf="ocultarModalFactura" 
+        (cerrar)="goToLoadModal($event,0,0,'',0)"
+        ></app-modal-prefactura>
     </div>
   </div>
 
@@ -165,4 +140,5 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
