--- a/app/src/app/pages/facturas/facturas.component.html
+++ b/app/src/app/pages/facturas/facturas.component.html
@@ -30,6 +30,7 @@
                 <th  scope="col">Fecha entrega</th>
                 <th  scope="col">Puerto Devolución</th>
                 <th  scope="col">Dirección Entrega</th>
+                <th  scope="col">Estado</th>
                 <th  scope="col">Acciones</th>
             </tr>
         </thead>
@@ -44,6 +45,7 @@
                 <td>{{ item.fecha_entrega}}</td>
                 <td>{{ item.pname}}</td>
                 <td>{{ item.dname}}</td>
+                <td>{{ item.estado}}</td>
                 <td>
                   <div 
                   class="btn-group" 
