--- a/app/src/app/ui/modal-prefactura/modal-prefactura.component.html
+++ b/app/src/app/ui/modal-prefactura/modal-prefactura.component.html
@@ -114,7 +114,7 @@
 
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-success" >Confirmar</button>
+      <button type="button" class="btn btn-success" (click)="confirmaFactura()" >Confirmar</button>
       <button type="button" class="btn btn-secondary"  (click)="cerrarModal()" data-bs-dismiss="modal">Cerrar</button>
     </div>
    </form>
