--- a/app/src/app/pages/vehiculos/vehiculos.component.html
+++ b/app/src/app/pages/vehiculos/vehiculos.component.html
@@ -1,1 +1,65 @@
-<p>vehiculos works!</p>
+
+ <div class="container-fluid px-2">
+    <h1 class="mt-4">Vehiculos</h1>
+    <ol class="breadcrumb mb-4">
+        <li class="breadcrumb-item"><a routerLink="dashboard">Dashboard</a></li>
+        <li class="breadcrumb-item active">Vehiculos</li>
+    </ol>
+  
+  
+  <div class="card mb-4">
+      <div class="card-header">
+          <i class="fas fa-table me-1"></i>
+         Vehiculo
+      </div>
+      
+      <div class="card-body">
+      
+          <input type="text"
+          class="form-control col-lg-3"
+          placeholder="Buscar guia por descripcion" 
+          #txtbuscar
+         />
+          <br>
+          <br>
+          <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th  scope="col">N° Despacho</th>
+                  <th  scope="col">Descripcion</th>
+                  <th  scope="col">Tipo</th>
+                  <th  scope="col">Peso</th>
+                  <th  scope="col">Fecha retiro</th>
+                  <th  scope="col">Fecha entrega</th>
+                  <th  scope="col">Puerto Devolución</th>
+                  <th  scope="col">Dirección Entrega</th>
+                  <th  scope="col">Estado</th>
+              </tr>
+              </thead>
+              
+              <tbody>
+                <tr >
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                 
+              </tr>
+      
+              </tbody>
+          </table>
+        
+          
+      <br>
+      
+      </div>
+      </div>
+    </div>
+        
+        
+          
